fixing overflow  in mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -171,6 +171,11 @@ margin-left: 5px;
 }
 
 @media (max-width:480px) {
+  *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
   h1{
     font-size: 16px;
   }
